--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- 
+filename: index.html
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
+-->
 <!doctype html>
 <html lang="en">
   <head>
